@@ -393,6 +393,9 @@ C-API
 Library
 -------
 
+- Issue #6268: Fix seek() method of codecs.open(), don't read the BOM twice
+  after seek(0)
+
 - Issue #3798: sys.exit(message) writes the message to sys.stderr file, instead
   of the C file stderr, to use stderr encoding and error handler
 
